updated heading tags heirarchy

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
 
         <h1>Joel Varghese Mathew</h1>
-        <p>Front-End Developer</p>
+        <h2>Front-End Developer</h2>
 
         <address>
             Pattom, Trivandrum<br>
@@ -31,12 +31,12 @@
     <main>
 
         <section>
-            <h2>Skills</h2>
+            <h3>Skills</h3>
             <p>Semantic HTML, CSS, JavaScript, Responsive Web Design, Figma to Code.</p>
         </section>
 
         <section>
-            <h2>Education</h2>
+            <h3>Education</h3>
             <p>L'ecole Chempaka International, Trivandrum, Kerala - A-levels<br>
                 February 2018 - February 2023<br>
                 Activities and societies: Model United Nations, Track & Field, Urrja Social Service, Interschool competitions.</p>
@@ -44,7 +44,7 @@
 
         <section>
             
-            <h2>Experience</h2>
+            <h3>Experience</h3>
             <article>
                 <p>StackUp Learning Hub, Trivandrum, Kerala - Front-End Developer Internship<br>
                 February 2024 - November 2024</p>
@@ -74,7 +74,7 @@
     <hr>
 
     <footer>
-        <h3>Across the Internet</h3>
+        <h4>Across the Internet</h4>
         <ul>
             <li><a href="https://linkedin.com/in/joel-mathew-0b97a2317">LinkedIn</a></li>
             <li><a href="https://github.com/joelzac">GitHub</a></li>
