updated experience and skills

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section>
             <h3>Skills</h3>
-            <p>Semantic HTML, CSS, JavaScript, Responsive Web Design, Figma to Code.</p>
+            <p>Semantic HTML, CSS, JavaScript, React.Js, Bootstrap | Tailwind CSS, Responsive Web Design, Figma to Code.</p>
         </section>
 
         <section>
@@ -59,11 +59,11 @@
 
             <article>
                 <p>Freelance - Front-End Developer<br>
-                February 2025 - present</p>
+                January 2025 - present</p>
                     <ul>
-                        <li>Developed a professional website for a newly established interior designing company.</li>
-                        <li><a href="https://woodnbeyond.in">woodnbeyond.in</a></li>
+                        <li>Developed a professional website for a newly established interior designing company.<a href="https://woodnbeyond.in">woodnbeyond.in</a></li>
                         <li>Contributing in developing a full-stack website for a career guidance startup: Hubble Bubble</li>
+                        <li>Learning React.Js & Tailwind CSS alongside Vite for faster production</li>
                     </ul>
             </article>
 
