--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             
             <h3>Experience</h3>
             <article>
-                <p>StackUp Learning Hub, Trivandrum, Kerala - Front-End Developer Internship<br>
+                <p><strong>StackUp Learning Hub, Trivandrum, Kerala - Front-End Developer Internship</strong><br>
                 February 2024 - November 2024</p>
                     <ul>
                         <li>Semantic HTML | CSS</li>
@@ -58,7 +58,7 @@
             </article>
 
             <article>
-                <p>Freelance - Front-End Developer<br>
+                <p><strong>Freelance - Front-End Developer</strong><br>
                 January 2025 - present</p>
                     <ul>
                         <li>Developed a professional website for a newly established interior designing company.<a href="https://woodnbeyond.in">woodnbeyond.in</a></li>
