--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section>
             <h3>Skills</h3>
-            <p>Semantic HTML, CSS, JavaScript, React.Js, Bootstrap | Tailwind CSS, Responsive Web Design, Figma to Code.</p>
+            <p>Semantic HTML, CSS, JavaScript, React.Js, Bootstrap | Tailwind CSS, Version Control (Git | GitHub), Responsive Web Design, Figma to Code.</p>
         </section>
 
         <section>
