updated education subjects and target blank on links

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <h3>Education</h3>
             <p>L'ecole Chempaka International, Trivandrum, Kerala - A-levels<br>
                 February 2018 - February 2023<br>
+                Subjects: IT, Business, Economics, English.
                 Activities and societies: Model United Nations, Track & Field, Urrja Social Service, Interschool competitions.</p>
         </section>
 
@@ -76,8 +77,8 @@
     <footer>
         <h4>Across the Internet</h4>
         <ul>
-            <li><a href="https://linkedin.com/in/joel-mathew-0b97a2317">LinkedIn</a></li>
-            <li><a href="https://github.com/joelzac">GitHub</a></li>
+            <li><a href="https://linkedin.com/in/joel-mathew-0b97a2317" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/joelzac" target="_blank">GitHub</a></li>
         </ul>
     </footer>
     
