linebreak to education

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3>Education</h3>
             <p>L'ecole Chempaka International, Trivandrum, Kerala - A-levels<br>
                 February 2018 - February 2023<br>
-                Subjects: IT, Business, Economics, English.
+                Subjects: IT, Business, Economics, English.<br>
                 Activities and societies: Model United Nations, Track & Field, Urrja Social Service, Interschool competitions.</p>
         </section>
 
@@ -62,7 +62,7 @@
                 <p><strong>Freelance - Front-End Developer</strong><br>
                 January 2025 - present</p>
                     <ul>
-                        <li>Developed a professional website for a newly established interior designing company.<a href="https://woodnbeyond.in">woodnbeyond.in</a></li>
+                        <li>Developed a professional website for a newly established interior designing company.<a href="https://woodnbeyond.in" target="_blank">woodnbeyond.in</a></li>
                         <li>Contributing in developing a full-stack website for a career guidance startup: Hubble Bubble</li>
                         <li>Learning React.Js & Tailwind CSS alongside Vite for faster production</li>
                     </ul>
